--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -7,13 +7,18 @@ author_profile: true
 
 {% if site.talkmap_link == true %}
 
-<p>You can also see a <a href="/map">map</a> of all the places where I've given a presentation.</p>
+
+<!--<p>You can also see a <a href="/map">map</a> of all the places where I've given a presentation.</p>-->
 
 {% endif %}
 
+<p>This is a map of all the places where I have either given an <span style="color:#CA2C28">invited</span> or a <span style="color:#2981CA">contributed talk</span>, presented a  <span style="color:#CB6B2B">poster</span>, attended an <span style="color:#2BB7CB">event</span>, or spent a significant <span style="color:#6C28CA">period</span> (click any marker for more information).<br>
+In case of an online meeting, the marker is located in the place where the meeting has been organized.<br>
+Click any cluster to zoom and expand it<!--, and use the layer control menu to select which category to show:-->.</p>
+<iframe src="/map/map.html" height="500" width="100%" style="border:none;"></iframe>
 
 
-
+<p>Here is instead a list of all the contributed and invited talks I've given:</p>
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
